--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta name="keywords" content="wikipedia, article, wikipedia article, search"/>
     <meta name="robots" content="index/follow"/>
     <meta name="author" content="Jonalbert Encina"/>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="wiki.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"/>    
     <link rel="stylesheet" href="wiki.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"/>
     <title>Wikipedia Searcher</title>
     
   </head>
@@ -41,5 +43,6 @@
     <ul class= "text-center" id="fill">
     </ul> <!--end of unordered list-->
   </div><!--end of container-->
+      
   </body>
 </html>
